@@ -449,15 +449,16 @@ getPayload(CommHndl conn_fd, Buffer * b)
 {
   unsigned int    c = b->length - b->ptr;
   int             rc = 0;
-  b->content = (char *) malloc(b->content_length + 8);
-  if (c)
-    memcpy(b->content, (b->data) + b->ptr, c);
 
   if (c > b->content_length) {
     mlogf(M_INFO, M_SHOW,
-          "--- HTTP Content-Length is lying; content truncated\n");
-    c = b->content_length;
+          "--- HTTP Content-Length is lying; rejecting, %d %d\n", c, b->content_length);
+    return -1;
   }
+
+  b->content = (char *) malloc(b->content_length + 8);
+  if (c)
+    memcpy(b->content, (b->data) + b->ptr, c);
 
   rc = readData(conn_fd, (b->content) + c, b->content_length - c);
   *((b->content) + b->content_length) = 0;
