@@ -50,6 +50,7 @@ Bugs fixed:
 - 2997961 IndRetryTest.sh leaves IndicationSubscription modded
 - 2999667 Handle DeliveryFailureTime internally
 - 3001879 Remove SLP sections from internalProvider
+- 3001896 httpAdapter can crash on bad content length
 
 Changes in 1.3.7
 ================
